add get_user_files for api
